--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["dotnet", "Hasher", "indisponible", "instanciada"]
+  "cSpell.words": ["dotnet", "hashear", "Hasher", "indisponible", "instanciada"]
 }
