--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["dotnet", "hashear", "Hasher", "indisponible", "instanciada", "instanciar"]
+  "cSpell.words": ["dotnet", "hashear", "Hasher", "iana", "Iana", "indisponible", "instanciada", "instanciar"]
 }
