Refactor nueva version de plantilla

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,14 @@
 {
-  "cSpell.words": ["dotnet", "hashear", "Hasher", "iana", "Iana", "indisponible", "instanciada", "instanciar"]
+  "cSpell.words": [
+    "dotnet",
+    "Encapsulamiento",
+    "hashear",
+    "Hasher",
+    "iana",
+    "Iana",
+    "indisponible",
+    "instanciada",
+    "instanciar",
+    "reseteo"
+  ]
 }
