--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "desasignación",
     "dotnet",
     "Encapsulamiento",
     "hashear",
@@ -10,6 +11,7 @@
     "instanciada",
     "instanciar",
     "Odontólogo",
+    "reprogramación",
     "reseteo"
   ]
 }
