added calendar configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "indisponible",
     "instanciada",
     "instanciar",
+    "Mantenibilidad",
     "Odontólogo",
     "reprogramación",
     "reseteo",
