--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
     "instanciar",
     "Mantenibilidad",
     "Odontólogo",
+    "regulatorios",
     "reprogramación",
     "reseteo",
     "revalidación",
