--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,8 @@
     "instanciar",
     "Mantenibilidad",
     "Odontólogo",
+    "Postgre",
+    "postgres",
     "regulatorios",
     "reprogramación",
     "reseteo",
