Creado email-service.md

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "cSpell.words": [
+    "appsettings",
     "desasignación",
+    "dinámicamente",
     "dotnet",
     "Encapsulamiento",
     "hashear",
@@ -15,9 +17,12 @@
     "Postgre",
     "postgres",
     "regulatorios",
+    "renderizar",
     "reprogramación",
     "reseteo",
     "revalidación",
-    "textplain"
+    "textplain",
+    "tipada",
+    "tipado"
   ]
 }
