--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
     "Odontólogo",
     "Postgre",
     "postgres",
+    "Redirección",
     "regulatorios",
     "renderizar",
     "reprogramación",
