Anadido errores a las entidades

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     "regulatorios",
     "renderizar",
     "reprogramación",
+    "reprogramado",
     "reseteo",
     "revalidación",
     "textplain",
