--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
     "renderizar",
     "reprogramación",
     "reprogramado",
+    "Resetear",
     "reseteo",
     "revalidación",
     "textplain",
